# magic_online_metagame_crawler

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODEBASE_REVIEW.md  COVERAGE_GAP_SUMMARY.txt  INSTALLATION.md  ISSUE_FILE_MAPPING.md  LICENSE  README.md  REFACTORING_GUIDE.md  TODO.txt  UNTESTED_FUNCTIONS_DETAILED.txt  WORKFLOW.md  claim_issue.sh  claim_issue_codex.sh  common.py  dbq.py  dump_collection.py  helper.py  lint_test_commit.sh  main.py  main_wx.py  manatraders_navigator.py  metagame.py  modo_navigator.py  mtggoldfish_navigator.py  mtgo_navigator.py  netdecker.py  ocr.py  player_to_deck.py  pyproject.toml  pytest_host.conf.example  requirements-dev.txt  run_build_on_host.sh  run_pytest_on_host.sh  setup.py  test_card_display.py  test_mtgo_fetch.py  utils.py
controllers/: __init__.py  app_controller.py  deck_selector_controller.py  session_manager.py
docs/: CODEBASE_REVIEW.md  TEST_COVERAGE_GAPS.md  build_install_audit.md  issue_21_deck_selector_analysis.md  localization_plan.md  mtgo_decklist_extraction_plan.md
locales/: en.json  pt_br.json
navigators/: manatraders.py  mtggoldfish.py  mtgo.py  mtgo_decklists.py
packaging/: README.md  build_installer.ps1  build_installer.sh  installer.iss  magic_online_metagame_crawler.spec  test_installer.ps1  test_installer.sh
repositories/: __init__.py  card_repository.py  deck_repository.py  metagame_repository.py
resources/: ui_copy.json
scripts/: benchmark_json_caches.py  check_card_face_images.py  clear_caches.py  dump_collection.py  fetch_mana_assets.py  fetch_mtgo_challenge.py  fetch_mtgo_league.py  generate_architecture_diagram.py  generate_dependency_diagram.py  lint_test_commit_codex.sh  list_mtgo_events.py  ltcc  monitor_currency.py  mtgosdk_repl.py  run_logged.py  run_remote_pytest.sh  test_card_images.py  update_mtgosdk_vendor.py  update_vendor_data.py
services/: __init__.py  archetype_service.py  cache_preloader_service.py  collection_service.py  deck_analysis_service.py  deck_paths.py  deck_research_service.py  deck_selector_card_data.py  deck_selector_collection.py  deck_selector_config.py  deck_selector_daily_average.py  deck_selector_image.py  deck_selector_state.py  deck_selector_zones.py  deck_service.py  deck_workflow_service.py  diagnostics_service.py  image_service.py  match_history_service.py  mtgo_background_service.py  (+4 more)
utils/: dbq.py  (+33 more)
(+101 files in other folders)
