[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg_metagame_tools"
version = "0.2"
description = "MTG Metagame Analysis: Opponent tracking and deck research tools for MTGO"
authors = [{name = "yochi", email = "pedrogush@gmail.com"}]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "env",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "requirements-dev.txt",
]

# Line length to match black
line-length = 100

# Python version
target-version = "py311"

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Ignore specific rules that might be too strict
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function call in argument defaults
    "C901",  # Function is too complex
    "B905",  # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.lint.per-file-ignores]
# Ignore import issues in __init__.py files
"__init__.py" = ["F401", "F403"]
# Ignore complexity in test files
"test_*.py" = ["C901"]
"**/tests/**" = ["C901"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | env
  | venv
  | __pycache__
  | build
  | dist
  | \.eggs
  | .*\.egg-info
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter checking
ignore_missing_imports = true
exclude = [
    "env",
    "venv",
    ".venv",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = [
    "env",
    "venv",
    ".venv",
    "tests",
    "build",
    "dist",
]
skips = [
    "B101",  # assert_used - OK in tests
    "B601",  # paramiko_calls - Not using paramiko
]

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests/**"]
